--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
-  "name": "vercel-blob",
-  "repository": "https://github.com/vercel/examples.git",
-  "license": "MIT",
-  "version": "0.0.0",
-  "private": true,
-  "engines": {
-    "pnpm": "9.15.4"
-  },
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@vercel/blob": "^0.26.0",
-    "next": "^15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1"
-  },
-  "devDependencies": {
-    "@types/ms": "^0.7.34",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.0.3",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "turbo": "^2.3.0",
-    "typescript": "^5.6.3"
-  },
-  "packageManager": "pnpm@9.13.0"
+	"name": "vercel-blob",
+	"repository": "https://github.com/vercel/examples.git",
+	"license": "MIT",
+	"version": "0.0.0",
+	"private": true,
+	"engines": {
+		"pnpm": "9.15.4"
+	},
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "6.3.0",
+		"@radix-ui/react-accordion": "^1.2.2",
+		"@radix-ui/react-alert-dialog": "^1.1.5",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.5",
+		"@supabase/ssr": "^0.5.2",
+		"@vercel/blob": "^0.26.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.474.0",
+		"next": "^15.0.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hot-toast": "^2.4.1",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
+		"youtube-url": "^0.5.0",
+		"youtube-video-id": "^1.0.4"
+	},
+	"devDependencies": {
+		"@types/ms": "^0.7.34",
+		"@types/node": "^22.13.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8.57.1",
+		"eslint-config-next": "^15.0.3",
+		"postcss": "^8.4.49",
+		"prisma": "^6.3.0",
+		"tailwindcss": "^3.4.14",
+		"ts-node": "^10.9.2",
+		"turbo": "^2.3.0",
+		"typescript": "^5.7.3"
+	},
+	"packageManager": "pnpm@9.13.0"
 }
